<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="hint_username">Masukkan Username Anda</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="lupa_pass">Lupa Password ?</string>
    <string name="btn_login">Masuk</string>
    <string name="tv_regis">Belum Punya Akun ?</string>
    <string name="btn_login_register">Daftar Disini</string>
    <string name="regis">Register</string>
    <string name="hint_name">Masukkan Nama Anda</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="btn_regis">Daftar</string>
    <string name="tv_register">Sudah Punya Akun ?</string>
    <string name="btn_register">Masuk Disini</string>
    <string name="snack_regis">Register Berhasil, Silahkan Login</string>
    <string name="snack_regis_gagal">Register Gagal !!!\nSilahkan Isi Data Register Terlebih Dahulu !</string>
    <string name="snack_login">Login Berhasil!!!</string>
    <string name="snack_login_gagal">Login Gagal !!!\nSilahkan cek username/password Anda !</string>
    <string name="welcome">Selamat Datang !</string>
    <string name="tombol_kembali">Tombol Kembali</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="btn_logout">Keluar</string>
    <string name="question">Siapakah Mentor IL Yang Terbaik ?</string>
    <string name="il_reza">Kak Reza</string>
    <string name="il_raihan">Kak Raihan</string>
    <string name="il_jovian">Kak Jovian</string>
    <string name="il_megy">Kak Megy</string>
    <string name="il_maulana">Kak Maulana</string>
    <string name="close">Tutup</string>
    <string name="choose">Pilih</string>
    <string name="hello_home_fragment">Ini Home Fragment</string>
    <string name="btn_fragment">Pindah ke FragmentActivity</string>
    <string name="log_desc">Apakah Anda ingin keluar dari aplikasi ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>